--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
+          registry: ${{ secrets.DOCKER_REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -43,8 +44,10 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: true
+          context: .
           tags: emercoin/myflask_app:latest
+          load: true
+      - run: docker push ${{ secrets.DOCKER_REGISTRY }}/myflask_app:lastest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
