--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          tags: emercoin/myflask_app:latest
+          tags: emercoin/myflask_app:0.0.1
           load: true
       - run: docker push ${{ secrets.DOCKER_REGISTRY }}/myflask_app:lastest
 
