--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
           context: .
           tag_with_ref: true
           load: true
-      - run: docker push ${{ secrets.DOCKER_REGISTRY }}/myflask_app
+      - run: docker push ${{ secrets.DOCKER_REGISTRY }}/myflask_app:lastest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
