--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,19 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@main
+        with:
+          host: ${{ secrets.TEST_HOST }}
+          username: ${{ secrets.TEST_HOST_ADMIN }}
+          key: ${{ secrets.SSH_KEY }}
+          #passphrase: ${{ secrets.PASSPHRASE }} # если ваш ssh-ключ защищен фразой-паролем
+          script: |
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/myflask_app:lastest
+            sudo docker stop $(sudo docker ps -a -q)
+            sudo docker run --rm -d -p 5000:5000 {{ secrets.DOCKER_USERNAME }}/myflask_app:lastest
