--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,5 +64,6 @@ jobs:
           #passphrase: ${{ secrets.PASSPHRASE }} # если ваш ssh-ключ защищен фразой-паролем
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/myflask_app:lastest
-            sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 {{ secrets.DOCKER_USERNAME }}/myflask_app:lastest
+            sudo docker stop myflask_container
+            sudo docker container rm myflask_container
+            sudo docker run --rm --name=myflask_container -d -p 5000:5000 {{ secrets.DOCKER_USERNAME }}/myflask_app:lastest
