--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,3 +67,14 @@ jobs:
             sudo docker stop myflask_container
             sudo docker run --rm --name=myflask_container -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/myflask_app:lastest
           # Если это первый деплой на новую машину 1) установить на ней Docker 2) зачачать образ, запустить контейнер (!) с именем.
+
+  send_message:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: send message
+        uses: appleboy/telegram-action@v0.1.0
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: ${{ github.workflow }} успешно выполнен!
