--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
+      - name: Download artifact
+        - uses: actions/download-artifact@v2
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
