--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Download artifact
-        - uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v2
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
