--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,13 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
-      - name: Download artifact
-        uses: actions/download-artifact@v2
+      - name: Download assers
+        uses: dsaltares/fetch-gh-release-asset@master
+        with:
+          repo: "mechnotech/flask-app"
+          version: "latest"
+          file: "plague-linux.zip"
+          #token: ${{ secrets.YOUR_TOKEN }}
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
