--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,13 +35,22 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
+      - name: Get the version
+          id: vars
+          run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
+
       - name: Download assers
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-          repo: "mechnotech/flask-app"
-          version: "latest"
-          file: "redis-6.0.6.tar.gz"
+          repo: mechnotech/flask-app
+          version: latest
+          file: emercoin-${{steps.vars.outputs.tag}}-x86_64-linux-gnu.tar.gz
           #token: ${{ secrets.YOUR_TOKEN }}
+
+      - name: Build the tagged Docker image
+          run: docker build . --file Dockerfile --tag emercoin/myflask_app:${{steps.vars.outputs.tag}}
+      - name: Push the tagged Docker image
+          run: docker push emercoin/myflask_app:${{steps.vars.outputs.tag}}
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -49,14 +58,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push to Docker Hub
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          tags: ${{ secrets.DOCKER_REGISTRY }}/myflask_app:latest
-          load: true
-      - run: docker push ${{ secrets.DOCKER_REGISTRY }}/myflask_app:latest
+
+
+#      - name: Push to Docker Hub
+#        id: docker_build
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          tags: ${{ secrets.DOCKER_REGISTRY }}/myflask_app:latest
+#          load: true
+#      - run: docker push ${{ secrets.DOCKER_REGISTRY }}/myflask_app:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
