--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,9 @@ jobs:
 
       - name: Get the version
         id: vars
-        run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10}) | tr -cd [:digit:][:punct:]
+        run: |
+          echo ::set-output name=tag::$(echo ${GITHUB_REF:10}) | tr -cd [:digit:][:punct:]
+          echo $tag
 
       - name: Download assers
         uses: dsaltares/fetch-gh-release-asset@master
@@ -48,9 +50,9 @@ jobs:
           #token: ${{ secrets.YOUR_TOKEN }}
 
       - name: Build the tagged Docker image
-        run: docker build . --file Dockerfile --tag emercoin/myflask_app:${{steps.vars.outputs.tag}}
+        run: docker build . --file Dockerfile --tag emercoin/myflask_app:latest
       - name: Push the tagged Docker image
-        run: docker push emercoin/myflask_app:${{steps.vars.outputs.tag}}
+        run: docker push emercoin/myflask_app:latest
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
