--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Docker Image CI
 
-on:
+on: [push]
   release:
     types: [published, edited]
 
@@ -38,27 +38,27 @@ jobs:
       - name: Get the version
         id: vars
         run: |
-          echo ::set-output name=tag::$(echo ${GITHUB_REF:10}) | tr -cd [:digit:][:punct:]
+          echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
           echo $tag
 
-      - name: Download assers
-        uses: dsaltares/fetch-gh-release-asset@master
-        with:
-          repo: mechnotech/flask-app
-          version: latest
-          file: emercoin-${{steps.vars.outputs.tag}}-x86_64-linux-gnu.tar.gz
-          #token: ${{ secrets.YOUR_TOKEN }}
-
-      - name: Build the tagged Docker image
-        run: docker build . --file Dockerfile --tag emercoin/myflask_app:latest
-      - name: Push the tagged Docker image
-        run: docker push emercoin/myflask_app:latest
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+#      - name: Download assers
+#        uses: dsaltares/fetch-gh-release-asset@master
+#        with:
+#          repo: mechnotech/flask-app
+#          version: latest
+#          file: emercoin-${{steps.vars.outputs.tag}}-x86_64-linux-gnu.tar.gz
+#          #token: ${{ secrets.YOUR_TOKEN }}
+#
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#
+#      - name: Build the tagged Docker image
+#        run: docker build . --file Dockerfile --tag emercoin/myflask_app:latest
+#      - name: Push the tagged Docker image
+#        run: docker push emercoin/myflask_app:latest
 
 
 
