--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         id: vars
         run: |
           echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
-          echo $tag
+          echo ${{steps.vars.outputs.tag}}
 
 #      - name: Download assers
 #        uses: dsaltares/fetch-gh-release-asset@master
