--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,10 @@ jobs:
       - name: Get the version
         id: vars
         run: |
-          echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
-          echo ${{steps.vars.outputs.tag}}
+          echo ::set-output name=tag::$(echo ${GITHUB_REF:10} | tr -cd [:digit:][:punct:])
+          echo tag
+          echo $set-output
+          env
 
 #      - name: Download assers
 #        uses: dsaltares/fetch-gh-release-asset@master
