--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,16 +52,16 @@ jobs:
           file: "emercoin-${{steps.vars.outputs.tag}}-x86_64-linux-gnu.tar.gz"
           #token: ${{ secrets.YOUR_TOKEN }}
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build the tagged Docker image
-        run: docker build . --file Dockerfile --tag emercoin/myflask_app:latest
-      - name: Push the tagged Docker image
-        run: docker push emercoin/myflask_app:latest
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#
+#      - name: Build the tagged Docker image
+#        run: docker build . --file Dockerfile --tag emercoin/myflask_app:latest
+#      - name: Push the tagged Docker image
+#        run: docker push emercoin/myflask_app:latest
 
 
 
