--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,8 @@ jobs:
 
       - name: Get the version
         id: vars
-        run: |
-          echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
-          tag=${tag//[a-z]/}
+        run: echo ::set-output name=${tag::$(echo ${GITHUB_REF:10})//[a-z]/}
+          #tag=${tag//[a-z]/}
 
       - name: Download assers
         uses: dsaltares/fetch-gh-release-asset@master
