--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Get the version
         id: vars
-        run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
+        run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10}) | tr -cd [:digit:][:punct:]
           #  tag=${tag//[a-z]/}
           #  eee
 
@@ -49,7 +49,7 @@ jobs:
         with:
           repo: mechnotech/flask-app
           version: latest
-          file: "emercoin-${{steps.vars.outputs.tag//[a-z]/}}-x86_64-linux-gnu.tar.gz"
+          file: "emercoin-${{steps.vars.outputs.tag}}-x86_64-linux-gnu.tar.gz"
           #token: ${{ secrets.YOUR_TOKEN }}
 
       - name: Login to DockerHub
