--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,10 @@ jobs:
 
       - name: Get the version
         id: vars
-        run: echo ::set-output name=tag::$(echo ${GITHUB_REF//[a-z]/})
-          #  tag=${tag//[a-z]/}
-          #  eee
+        run: |
+          vers=${GITHUB_REF:10}
+          digvers=${vers//[a-z]/}
+          echo ::set-output name=tag::$(echo ${vers})
 
       - name: Download assers
         uses: dsaltares/fetch-gh-release-asset@master
